fixed black highlighting

--- a/src/gwt/org/bbop/apollo/gwt/client/resources/Table.css
+++ b/src/gwt/org/bbop/apollo/gwt/client/resources/Table.css
@@ -108,7 +108,7 @@
 
 .dataGridSelectedRow {
     background: #628cd5;
-    color: white;
+    color: black;
     height: auto;
     overflow: auto;
 }
